# TinyRecursiveModels

./: .gitignore  README.md  generate_stories.py  pretrain_text.py  pyproject.toml  sweep_generation.py  text_datasets.py  tinystories_dataset.py  tokenizer_configs.py
config/: cfg_tinystories_10m_moeut.yaml  cfg_tinystories_1m.yaml  cfg_tinystories_1m_flat.yaml  cfg_tinystories_1m_moeut.yaml  cfg_tinystories_1m_moeut_act.yaml  cfg_tinystories_1m_moeut_noact.yaml  cfg_tinystories_1m_noact.yaml  cfg_tinystories_1m_noact_1l.yaml
config/arch/: trm_tinystories_10m_moeut.yaml  trm_tinystories_1m.yaml  trm_tinystories_1m_flat.yaml  trm_tinystories_1m_moeut.yaml  trm_tinystories_1m_moeut_act.yaml  trm_tinystories_1m_moeut_noact.yaml  trm_tinystories_1m_noact.yaml  trm_tinystories_1m_noact_1l.yaml
models/: layers.py  losses.py  moeut_layers.py
models/recursive_reasoning/: trm.py
