[project]
name = "tiny-recursive-models"
version = "0.1.0"
description = "TinyRecursiveModels experiments adapted for TinyStories language modeling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adam-atan2>=0.0.3",
    "coolname>=2.2",
    "datasets>=3.0",
    "einops>=0.7",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "packaging>=23.0",
    "pydantic>=2.6",
    "torch>=2.3",
    "tqdm>=4.66",
    "transformers>=4.40",
    "wandb>=0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.uv.pip]
compile-bytecode = false
